--- a/info.yaml
+++ b/info.yaml
@@ -3,8 +3,8 @@ title: "exzendtential-crisis" # this is the title that will show up on the score
 description: "What is this?"
 public_files: [
 ]
-tags: ["web?", "pwn?"]
+tags: ["web", "pwn"]
 author: "adamd"
-stateful: false # two consecutive connections go to the same VM
+stateful: true # two consecutive connections go to the same VM
 to_deploy: true # this chall needs a VM to be deployed
-is_ready: false # this chall is ready for prime time
+is_ready: true # this chall is ready for prime time
